<resources>
    <string name="app_name">SistemaDeAlarmado2_0</string>
    <string name="name_medicine">Nombre del medicamento</string>
    <string name="doses">Dosis</string>
    <string name="period">Periodo de consumo(hrs)</string>
    <string name="duration">Duración(dd)</string>
    <string name="button1">Seleccionar fecha</string>
    <string name="button2">Seleccionar hora</string>
    <string name="button3">Guardar</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
</resources>
