<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    android:orientation="vertical"
    tools:context="com.example.sistemadealarmado2_0.alarma"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/activity_alarma"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_medicine"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/doses"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/period"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/duration"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hour"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="llenar"
        android:text="@string/button3" />

    <TimePicker
        android:layout_height="106dp"
        android:layout_width="match_parent"
        android:id="@+id/timePicker"
        android:visibility="invisible"/>

    <DatePicker
        android:layout_height="82dp"
        android:layout_width="match_parent"
        android:id="@+id/datePicker"
        android:visibility="invisible"/>

</LinearLayout>